// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Snapshots should render an Avatar Large 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      false,
      false,
      Object {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      },
      false,
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Large bordered 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      Object {
        "borderWidth": 2,
      },
      Object {
        "borderColor": "#2196F3",
      },
      Object {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      },
      false,
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Large with placeholder 1`] = `
<Image
  source={
    Object {
      "testUri": "../../../src/Avatar/placeholderImage.png",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      false,
      false,
      Object {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      },
      false,
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Medium 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      false,
      false,
      false,
      false,
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Medium bordered 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      Object {
        "borderWidth": 2,
      },
      Object {
        "borderColor": "#2196F3",
      },
      false,
      false,
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Small 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      false,
      false,
      Object {
        "borderRadius": 15,
        "height": 30,
        "width": 30,
      },
      false,
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Small bordered 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      Object {
        "borderWidth": 2,
      },
      Object {
        "borderColor": "#2196F3",
      },
      Object {
        "borderRadius": 15,
        "height": 30,
        "width": 30,
      },
      false,
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Square Large 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      false,
      false,
      Object {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Square Large bordered 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      Object {
        "borderWidth": 2,
      },
      Object {
        "borderColor": "#2196F3",
      },
      Object {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Square Medium 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      false,
      false,
      false,
      Object {
        "borderRadius": 0,
      },
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Square Medium bordered 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      Object {
        "borderWidth": 2,
      },
      Object {
        "borderColor": "#2196F3",
      },
      false,
      Object {
        "borderRadius": 0,
      },
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Square Small 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      false,
      false,
      Object {
        "borderRadius": 15,
        "height": 30,
        "width": 30,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
/>
`;

exports[`Avatar Snapshots should render an Avatar Square Small bordered 1`] = `
<Image
  source={
    Object {
      "uri": "https://wallscover.com/images/gunther-wallpaper-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      },
      Object {
        "borderWidth": 2,
      },
      Object {
        "borderColor": "#2196F3",
      },
      Object {
        "borderRadius": 15,
        "height": 30,
        "width": 30,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
/>
`;
